| Bug #1595 | mysqlbinlog can't read a password from the console | ||
|---|---|---|---|
| Submitted: | 18 Oct 2003 7:26 | Modified: | 20 Oct 2003 6:38 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 3.23 | OS: | Any (all) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[18 Oct 2003 7:26]
Guilhem Bichot
[20 Oct 2003 6:38]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
ChangeSet@1.1422, 2003-10-20 15:35:03+02:00, guilhem@mysql.com
Now mysqlbinlog prompts for the password if
mysqlbinlog -p
instead of printing the usage().
This makes mysqlbinlog behave like other clients, which is the reason
why we fix this in 3.23.
Note that before, one could use
mysqlbinlog -p pass
and now one must use
mysqlbinlog -ppass
(putting a space will ask for the password), like for other clients
(for example: mysqldump, mysqladmin).
